import("//build/sdl2.gni")

group("all") {
  deps = [
    ":piratedemo",
    "//tools/tilemapeditor:tilemapeditor",
  ]
}

lua_ldflags = [ "-llua" ]

executable("piratedemo") {
  sources = ["piratedemo/main.cc"]
  deps = ["//engine2:engine2", "//engine2/ui:ui"]
  cflags = sdl2_cflags
  ldflags = sdl2_ldflags + lua_ldflags
}

executable("test") {
  sources = ["engine2/test/run_all_tests.cc"]
  deps = ["//engine2:tests"]
  cflags = sdl2_cflags
  ldflags = sdl2_ldflags + lua_ldflags
  testonly = true
}
