import("//build/sdl2.gni")
import("//build/lua.gni")

group("all") {
  deps = [
    "//piratedemo",
    "//tools/tilemapeditor",
  ]
}

executable("test") {
  sources = ["engine2/test/run_all_tests.cc"]
  deps = ["//engine2:tests"]
  cflags = sdl2_cflags
  ldflags = sdl2_ldflags + lua_ldflags
  testonly = true
}
