source_set("engine2") {
  sources = [
    "base/build_string.h",
    "base/list.h",
    "callback_queue.cc",
    "callback_queue.h",
    "callback_with_id.h",
    "camera2d.cc",
    "camera2d.h",
    "font.cc",
    "font.h",
    "get_collision_time.h",
    "init.cc",
    "init.h",
    "logic_context.cc",
    "logic_context.h",
    "graphics2d.h",
    "memory/weak_pointer.h",
    "object.h",
    "offset_graphics2d.cc",
    "offset_graphics2d.h",
    "point.h",
    "physics_object.h",
    "rect.h",
    "rgba_color.cc",
    "rgba_color.h",
    "space.h",
    "sprite.cc",
    "sprite.h",
    "state_mutex.cc",
    "state_mutex.h",
    "texture.cc",
    "texture.h",
    "texture_cache.cc",
    "texture_cache.h",
    "tile_map.cc",
    "tile_map.h",
    "time.cc",
    "time.h",
    "timing.h",
    "timing.cc",
    "types.h",
    "vec.h",
    "video_context.cc",
    "video_context.h",
    "window.h",
    "window.cc",
  ]
  deps = [
    "//engine2/impl:impl"
  ]
}

source_set("test_support") {
  sources = [
    "test_clock.cc",
    "test_clock.h",
    "test_graphics2d.cc",
    "test_graphics2d.h",
  ]
  deps = [
    ":engine2",
  ]
}

source_set("tests") {
  sources = [
    "base/list_test.cc",
    "base/list_test.h",
    "memory/weak_pointer_test.cc",
    "memory/weak_pointer_test.h",
    "physics_object_test.cc",
    "physics_object_test.h",
    "rect_test.cc",
    "rect_test.h",
    "space_test.cc",
    "space_test.h",
    "sprite_test.cc",
    "sprite_test.h",
    "texture_cache_test.cc",
    "texture_cache_test.h",
    "tile_map_test.cc",
    "tile_map_test.h",
    "time_test.cc",
    "time_test.h",
    "vec_test.cc",
    "vec_test.h",
  ] 
  deps = [ 
    ":engine2",
    ":test_support",
    "//engine2/test:test",
    "//engine2/impl:test",
  ]
  testonly = true
}
