import("//build/sdl2.gni")
import("//build/lua.gni")

asan_flags = []

executable("piratedemo") {
  sources = [
    "data.cc",
    "data.h",
    "game.cc",
    "game.h",
    "main.cc",
    "player.cc",
    "player.h",
    "thing.cc",
    "thing.h",
    "types.h",
    "wall.cc",
    "wall.h",
  ]
  deps = [
    "//engine2:engine2",
  ]
  cflags = sdl2_cflags + asan_flags
  ldflags = sdl2_ldflags + lua_ldflags + asan_flags
}