import("//build/sdl2.gni")
import("//build/lua.gni")
import("//engine2/performance/flags.gni")

asan_flags = []

executable("piratedemo") {
  sources = [
    "data.cc",
    "data.h",
    "game.cc",
    "game.h",
    "main.cc",
    "player.cc",
    "player.h",
    "thing.cc",
    "thing.h",
    "types.h",
    "wall.cc",
    "wall.h",
  ]
  deps = [
    "//engine2:engine2",
  ]

  if (enable_perf_tools) {
    deps += [
      "//engine2/performance:frame_stats_overlay",
      "//engine2/performance:perf_recorder",
      "//engine2/performance:scoped_stopwatch",
    ]
  }

  cflags = sdl2_cflags + asan_flags
  ldflags = sdl2_ldflags + lua_ldflags + asan_flags
}