source_set("impl") {
  sources = [
    "basic_graphics2d.cc",
    "basic_graphics2d.h",
    "logic_context_impl.cc",
    "logic_context_impl.h",
    "rect_search_tree.h",
    "video_context_impl.cc",
    "video_context_impl.h",
  ]
}

source_set("test") {
  sources = [
    "rect_search_tree_test.cc",
    "rect_search_tree_test.h",
  ]
}