import("//build/sdl2.gni")
import("//build/lua.gni")

executable("tilemapeditor") {
  sources = [
    "editor.cc",
    "editor.h",
    "layer_picker.cc",
    "layer_picker.h",
    "main.cc",
    #"sidebar_view.cc",
    #"sidebar_view.h",
    "tile_picker.cc",
    "tile_picker.h",
    "two_finger_touch.cc",
    "two_finger_touch.h",
  ]
  deps = [
    "//engine2:engine2",
    "//engine2/ui:ui",
  ]
  cflags = sdl2_cflags
  ldflags = sdl2_ldflags + lua_ldflags
}