import("//build/sdl2.gni")
import("//build/lua.gni")

#asan_flags = ["-fsanitize=address"]
asan_flags = []

executable("tilemapeditor") {
  sources = [
    "action_stack.cc",
    "action_stack.h",
    "editor.cc",
    "editor.h",
    "layer_picker.cc",
    "layer_picker.h",
    "main.cc",
    "rectangle_selection.cc",
    "rectangle_selection.h",
    #"sidebar_view.cc",
    #"sidebar_view.h",
    "tile_picker.cc",
    "tile_picker.h",
    "two_finger_touch.cc",
    "two_finger_touch.h",
  ]
  deps = [
    "//engine2:engine2",
    "//engine2/ui:ui",
  ]
  cflags = sdl2_cflags + asan_flags
  ldflags = sdl2_ldflags + lua_ldflags + asan_flags
}